[package]
name = "nordpool-mqtt"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "=0.4.41", features = ["serde"] }
color-eyre = "=0.6.5"
config = "=0.15.14"
croner = "=2.2.0"
eyre = "=0.6.12"
futures = "=0.3.31"
influxdb2 = { version = "=0.5.2", default-features = false, features = [
    "rustls",
] }
log = "=0.4.27"
pretty_env_logger = "=0.5.0"
rand = "=0.8.5"
reqwest = { version = "=0.11.24", default-features = false, features = [
    "tokio-rustls",
    "rustls",
    "rustls-tls",
    "json",
] }
rumqttc = "=0.24.0"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.142"
tokio = { version = "=1.47.1", features = ["full"] }
